<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.github.jlmc</groupId>
        <artifactId>flink-examples</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>flink-sink-connectors</artifactId>
    <packaging>pom</packaging>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <log4j-slf4j-impl.version>2.23.1</log4j-slf4j-impl.version>
        <slf4j-api.version>1.7.36</slf4j-api.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit-jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>2.15.2</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-csv</artifactId>
                <version>2.15.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>flink-sink-connectors-common</module>
        <module>socket-sink-connector</module>
        <module>local-file-system-sink-connector</module>
        <module>s3-sink-connector</module>
        <module>hdfs-file-system-sink-connector</module>
        <module>jdbc-sink-connector</module>
        <module>apache-kafka-sink-connector</module>
        <module>mongodb-sink-connector</module>
        <module>custom-sink-connector</module>
        <module>csv-sink-connector</module>
    </modules>
</project>
